# PROJET_LANGAGEC

./: CMakeLists.txt
cmake_modules/: findSDL2.cmake
include/: tasks.h
src/: main.c  tasks.c
